--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,10 +1,14 @@
 en:
   flash:
     title:
+      alert: Alert
+      error: Error
       notice: Notice
   helpers:
     label:
       user:
+        current_password: 
         email: Email
         password: Password
         password_confirmation: Password confirmation
+  my_account: My account
