--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,9 +1,48 @@
 en:
+  activerecord:
+    attributes:
+      job:
+        file: File
+        file_md5: File md5
+        format: Format
+        format_convert: Format convert
+        format_export: Format export
+        iev_action: Iev action
+        ignore_end_chars: Ignore end chars
+        ignore_last_word: Ignore last word
+        max_distance_for_commercial: Max distance for commercial
+        max_distance_for_connection_link: Max distance for connection link
+        name: Name
+        prefix: Prefix
+        time_zone: Time zone
+        uri: Uri
+        url: Url
+    errors:
+      messages:
+        choose_file_or_uri: File or URI
+        choose_file_or_url: File or URL
+        invalid_format_export: 'Invalid export format '
+    models:
+      job: Job
+      link: Links
+  complete: Complete
+  convert: Convert
+  convert_gtfs: Convert to GTFS
+  convert_neptune: 
+  convert_netex: 
+  cvdtc: CVDTC
+  devise:
+    mailer:
+      confirmation_instructions:
+        user_subject: Confirmation instructions
+  edit_account: 
+  export: 
   flash:
     title:
       alert: Alert
       error: Error
       notice: Notice
+  gtfs: 
   helpers:
     label:
       user:
@@ -11,4 +50,543 @@ en:
         email: Email
         password: Password
         password_confirmation: Password confirmation
+    submit:
+      job:
+        create: Create Job
+  history: 
+  job:
+    cancel: 
+    destroy:
+      confirm: Thank you to confirm the deletion of this element
+      title: 'History of my jobs:'
+    status:
+      pending: 
+    unable_to_proceed: 
+  jobs:
+    index:
+      title: 
+    no_history: 
   my_account: My account
+  neptune: 
+  netex: 
+  report:
+    conform_lines: 
+    delete: 
+    download: 
+    nonconforming_lines: 
+    total_results: 
+    validation_ended_at: 
+  search: Search
+  sidekiq: 
+  sign_out: 
+  simple_form:
+    error_notification:
+      job: 'Please review the problems below:'
+    hints:
+      job:
+        convert:
+          file: 
+          format: 
+          format_convert: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          time_zone: 
+          url: 
+        export:
+          file: 
+          format: 
+          format_export: 
+          uri: 
+          url: 
+        index:
+          file: 
+          file[]: 
+          format: 
+          format_export: 
+          iev_action: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          time_zone: 
+          uri: 
+          url: 
+        new:
+          file: 
+          format: 
+          format_export: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          uri: 
+          url: 
+    labels:
+      job:
+        convert:
+          file: 
+          format: 
+          format_convert: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          time_zone: 
+          url: 
+        export:
+          file: 
+          format: 
+          format_export: 
+          uri: 
+          url: 
+        index:
+          file: 
+          file[]: 
+          format: 
+          format_export: 
+          iev_action: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          time_zone: 
+          uri: 
+          url: 
+        new:
+          file: 
+          format: 
+          format_export: 
+          ignore_end_chars: 
+          ignore_last_word: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          uri: 
+          url: 
+    placeholders:
+      job:
+        convert:
+          ignore_end_chars: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          url: 
+        export:
+          uri: 
+          url: 
+        index:
+          file: 
+          file[]: 
+          iev_action: 
+          ignore_end_chars: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          uri: 
+          url: 
+        new:
+          ignore_end_chars: 
+          max_distance_for_commercial: 
+          max_distance_for_connection_link: 
+          prefix: 
+          uri: 
+          url: 
+    required:
+      html: <abbr title="required">*</abbr>
+      mark: "*"
+      text: required
+  submit: 
+  validate: Validate
+  validation_report:
+    details:
+      1-GTFS-CSV-1: 
+      1-GTFS-CSV-2: 
+      1-GTFS-CSV-3: 
+      1-GTFS-CSV-4: 
+      1-GTFS-CSV-5: 
+      1-GTFS-CSV-6: 
+      1-GTFS-CSV-7: 
+      1-GTFS-Calendar-1: 
+      1-GTFS-Calendar-2: 
+      1-GTFS-Common-1: 
+      1-GTFS-Common-10: 
+      1-GTFS-Common-11: 
+      1-GTFS-Common-12: 
+      1-GTFS-Common-13: 
+      1-GTFS-Common-14: 
+      1-GTFS-Common-15: 
+      1-GTFS-Common-16: 
+      1-GTFS-Common-2: 
+      1-GTFS-Common-3: 
+      1-GTFS-Common-4: 
+      1-GTFS-Common-5: 
+      1-GTFS-Common-6: 
+      1-GTFS-Common-7: 
+      1-GTFS-Common-8: 
+      1-GTFS-Common-9: 
+      1-GTFS-Route-1: 
+      1-GTFS-Route-2: 
+      1-NEPTUNE-XML-1: 
+      1-NEPTUNE-XML-2: 
+      2-GTFS-Common-1: 
+      2-GTFS-Common-2: 
+      2-GTFS-Common-3: 
+      2-GTFS-Common-4: 
+      2-GTFS-Route-1: 
+      2-GTFS-Route-2: 
+      2-GTFS-Route-3: 
+      2-GTFS-Route-4: 
+      2-GTFS-Stop-1: 
+      2-GTFS-Stop-2: 
+      2-GTFS-Stop-3: 
+      2-GTFS-Stop-4: 
+      2-NEPTUNE-AccessLink-1: 
+      2-NEPTUNE-AccessLink-2: 
+      2-NEPTUNE-AccessPoint-1: 
+      2-NEPTUNE-AccessPoint-2: 
+      2-NEPTUNE-AccessPoint-3: 
+      2-NEPTUNE-AccessPoint-4: 
+      2-NEPTUNE-AccessPoint-5: 
+      2-NEPTUNE-AccessPoint-6: 
+      2-NEPTUNE-AccessPoint-7: 
+      2-NEPTUNE-AreaCentroid-1: 
+      2-NEPTUNE-AreaCentroid-2: 
+      2-NEPTUNE-Common-1: 
+      2-NEPTUNE-Common-2: 
+      2-NEPTUNE-ConnectionLink-1: 
+      2-NEPTUNE-Facility-1: 
+      2-NEPTUNE-Facility-2: 
+      2-NEPTUNE-Facility-3: 
+      2-NEPTUNE-Facility-4: 
+      2-NEPTUNE-Facility-5: 
+      2-NEPTUNE-Facility-6: 
+      2-NEPTUNE-GroupOfLine-1: 
+      2-NEPTUNE-ITL-1: 
+      2-NEPTUNE-ITL-2: 
+      2-NEPTUNE-ITL-3: 
+      2-NEPTUNE-ITL-4: 
+      2-NEPTUNE-ITL-5: 
+      2-NEPTUNE-JourneyPattern-1: 
+      2-NEPTUNE-JourneyPattern-2: 
+      2-NEPTUNE-JourneyPattern-3: 
+      2-NEPTUNE-Line-1: 
+      2-NEPTUNE-Line-2: 
+      2-NEPTUNE-Line-3: 
+      2-NEPTUNE-Line-4: 
+      2-NEPTUNE-Line-5: 
+      2-NEPTUNE-Line-6: 
+      2-NEPTUNE-Network-1: 
+      2-NEPTUNE-Network-2: 
+      2-NEPTUNE-PtLink-1: 
+      2-NEPTUNE-Route-1: 
+      2-NEPTUNE-Route-10: 
+      2-NEPTUNE-Route-11: 
+      2-NEPTUNE-Route-12: 
+      2-NEPTUNE-Route-2: 
+      2-NEPTUNE-Route-3: 
+      2-NEPTUNE-Route-4: 
+      2-NEPTUNE-Route-5: 
+      2-NEPTUNE-Route-6: 
+      2-NEPTUNE-Route-7: 
+      2-NEPTUNE-Route-8: 
+      2-NEPTUNE-Route-9: 
+      2-NEPTUNE-StopArea-1: 
+      2-NEPTUNE-StopArea-2: 
+      2-NEPTUNE-StopArea-3: 
+      2-NEPTUNE-StopArea-4: 
+      2-NEPTUNE-StopArea-5: 
+      2-NEPTUNE-StopArea-6: 
+      2-NEPTUNE-StopPoint-1: 
+      2-NEPTUNE-StopPoint-2: 
+      2-NEPTUNE-StopPoint-3: 
+      2-NEPTUNE-StopPoint-4: 
+      2-NEPTUNE-Timetable-1: 
+      2-NEPTUNE-Timetable-2: 
+      2-NEPTUNE-Timetable-3: 
+      2-NEPTUNE-VehicleJourney-1: 
+      2-NEPTUNE-VehicleJourney-2: 
+      2-NEPTUNE-VehicleJourney-3: 
+      2-NEPTUNE-VehicleJourney-4: 
+      2-NEPTUNE-VehicleJourney-5: 
+      2-NEPTUNE-VehicleJourney-6: 
+      2-NEPTUNE-VehicleJourney-7: 
+      2-NEPTUNE-VehicleJourney-8: 
+      2-NEPTUNE-VehicleJourneyAtStop-1: 
+      2-NEPTUNE-VehicleJourneyAtStop-2: 
+      2-NEPTUNE-VehicleJourneyAtStop-3: 
+      2-NEPTUNE-VehicleJourneyAtStop-4: 
+      3-AccessLink-1: 
+      3-AccessLink-2: 
+      3-AccessLink-3: 
+      3-AccessPoint-1: 
+      3-AccessPoint-2: 
+      3-AccessPoint-3: 
+      3-ConnectionLink-1: 
+      3-ConnectionLink-2: 
+      3-ConnectionLink-3: 
+      3-Facility-1: 
+      3-Facility-2: 
+      3-JourneyPattern-1: 
+      3-JourneyPattern-2: 
+      3-JourneyPattern-3: 
+      3-Line-1: 
+      3-Line-2: 
+      3-Route-1: 
+      3-Route-2: 
+      3-Route-3: 
+      3-Route-4: 
+      3-Route-5: 
+      3-Route-6: 
+      3-Route-7: 
+      3-Route-8: 
+      3-Route-9: 
+      3-StopArea-1: 
+      3-StopArea-2: 
+      3-StopArea-3: 
+      3-StopArea-4: 
+      3-StopArea-5: 
+      3-VehicleJourney-1: 
+      3-VehicleJourney-2: 
+      3-VehicleJourney-3: 
+      3-VehicleJourney-4: 
+      4-AccessLink-1: 
+      4-AccessPoint-1: 
+      4-Company-1: 
+      4-ConnectionLink-1: 
+      4-ConnectionLink-2: 
+      4-GroupOfLine-1: 
+      4-JourneyPattern-1: 
+      4-Line-1: 
+      4-Line-2: 
+      4-Line-3: 
+      4-Line-4: 
+      4-Network-1: 
+      4-Route-1: 
+      4-StopArea-1: 
+      4-StopArea-2: 
+      4-Timetable-1: 
+      4-VehicleJourney-1: 
+      4-VehicleJourney-2: 
+      detail_1_gtfs_calendar_1: 
+      detail_1_gtfs_calendar_2: 
+      detail_1_gtfs_common_1: 
+      detail_1_gtfs_common_10: 
+      detail_1_gtfs_common_11: 
+      detail_1_gtfs_common_12: 
+      detail_1_gtfs_common_13: 
+      detail_1_gtfs_common_14: 
+      detail_1_gtfs_common_15_1: 
+      detail_1_gtfs_common_15_2: 
+      detail_1_gtfs_common_15_3: 
+      detail_1_gtfs_common_16: 
+      detail_1_gtfs_common_2: 
+      detail_1_gtfs_common_3: 
+      detail_1_gtfs_common_4: 
+      detail_1_gtfs_common_5: 
+      detail_1_gtfs_common_6: 
+      detail_1_gtfs_common_7: 
+      detail_1_gtfs_common_8: 
+      detail_1_gtfs_common_9: 
+      detail_1_gtfs_csv_1: 
+      detail_1_gtfs_csv_2: 
+      detail_1_gtfs_csv_3: 
+      detail_1_gtfs_csv_4: 
+      detail_1_gtfs_csv_5: 
+      detail_1_gtfs_csv_6: 
+      detail_1_gtfs_csv_7: 
+      detail_1_gtfs_route_1: 
+      detail_1_gtfs_route_2: 
+      detail_1_neptune_xml_1: 
+      detail_1_neptune_xml_2: 
+      detail_2_gtfs_common_1: 
+      detail_2_gtfs_common_2: 
+      detail_2_gtfs_common_3: 
+      detail_2_gtfs_common_4: 
+      detail_2_gtfs_route_1: 
+      detail_2_gtfs_route_2: 
+      detail_2_gtfs_route_3: 
+      detail_2_gtfs_route_4: 
+      detail_2_gtfs_stop_1: 
+      detail_2_gtfs_stop_2: 
+      detail_2_gtfs_stop_3: 
+      detail_2_gtfs_stop_4: 
+      detail_2_neptune_accesslink_1: 
+      detail_2_neptune_accesslink_2: 
+      detail_2_neptune_accesspoint_1: 
+      detail_2_neptune_accesspoint_2: 
+      detail_2_neptune_accesspoint_3: 
+      detail_2_neptune_accesspoint_4: 
+      detail_2_neptune_accesspoint_5: 
+      detail_2_neptune_accesspoint_6: 
+      detail_2_neptune_accesspoint_7: 
+      detail_2_neptune_areacentroid_1: 
+      detail_2_neptune_areacentroid_2: 
+      detail_2_neptune_common_1: 
+      detail_2_neptune_common_2: 
+      detail_2_neptune_connectionlink_1: 
+      detail_2_neptune_facility_1: 
+      detail_2_neptune_facility_2: 
+      detail_2_neptune_facility_3: 
+      detail_2_neptune_facility_4: 
+      detail_2_neptune_facility_5: 
+      detail_2_neptune_facility_6: 
+      detail_2_neptune_groupofline_1: 
+      detail_2_neptune_itl_1: 
+      detail_2_neptune_itl_2: 
+      detail_2_neptune_itl_3: 
+      detail_2_neptune_itl_4: 
+      detail_2_neptune_itl_5: 
+      detail_2_neptune_journeypattern_1: 
+      detail_2_neptune_journeypattern_2: 
+      detail_2_neptune_journeypattern_3: 
+      detail_2_neptune_line_1: 
+      detail_2_neptune_line_2: 
+      detail_2_neptune_line_3: 
+      detail_2_neptune_line_4: 
+      detail_2_neptune_line_5: 
+      detail_2_neptune_line_6: 
+      detail_2_neptune_network_1: 
+      detail_2_neptune_network_2: 
+      detail_2_neptune_ptlink_1: 
+      detail_2_neptune_route_1: 
+      detail_2_neptune_route_10: 
+      detail_2_neptune_route_11: 
+      detail_2_neptune_route_12: 
+      detail_2_neptune_route_2: 
+      detail_2_neptune_route_3: 
+      detail_2_neptune_route_4: 
+      detail_2_neptune_route_5: 
+      detail_2_neptune_route_6_1: 
+      detail_2_neptune_route_6_2: 
+      detail_2_neptune_route_7: 
+      detail_2_neptune_route_8: 
+      detail_2_neptune_route_9: 
+      detail_2_neptune_stoparea_1: 
+      detail_2_neptune_stoparea_2: 
+      detail_2_neptune_stoparea_3: 
+      detail_2_neptune_stoparea_4: 
+      detail_2_neptune_stoparea_5: 
+      detail_2_neptune_stoparea_6: 
+      detail_2_neptune_stoppoint_1: 
+      detail_2_neptune_stoppoint_2: 
+      detail_2_neptune_stoppoint_3: 
+      detail_2_neptune_stoppoint_4: 
+      detail_2_neptune_timetable_1: 
+      detail_2_neptune_timetable_2: 
+      detail_2_neptune_timetable_3: 
+      detail_2_neptune_vehiclejourney_1: 
+      detail_2_neptune_vehiclejourney_2: 
+      detail_2_neptune_vehiclejourney_3: 
+      detail_2_neptune_vehiclejourney_4: 
+      detail_2_neptune_vehiclejourney_5: 
+      detail_2_neptune_vehiclejourney_6: 
+      detail_2_neptune_vehiclejourney_7: 
+      detail_2_neptune_vehiclejourney_8: 
+      detail_2_neptune_vehiclejourneyatstop_1: 
+      detail_2_neptune_vehiclejourneyatstop_2: 
+      detail_2_neptune_vehiclejourneyatstop_3: 
+      detail_2_neptune_vehiclejourneyatstop_4: 
+      detail_3_accesslink_1: 
+      detail_3_accesslink_2: 
+      detail_3_accesslink_3_1: 
+      detail_3_accesslink_3_2: 
+      detail_3_accesslink_3_3: 
+      detail_3_accesslink_3_4: 
+      detail_3_accesspoint_1: 
+      detail_3_accesspoint_2: 
+      detail_3_accesspoint_3: 
+      detail_3_connectionlink_1: 
+      detail_3_connectionlink_2: 
+      detail_3_connectionlink_3_1: 
+      detail_3_connectionlink_3_2: 
+      detail_3_connectionlink_3_3: 
+      detail_3_connectionlink_3_4: 
+      detail_3_facility_1: 
+      detail_3_facility_2: 
+      detail_3_journeypattern_1: 
+      detail_3_line_1: 
+      detail_3_line_2: 
+      detail_3_route_1: 
+      detail_3_route_2: 
+      detail_3_route_3_1: 
+      detail_3_route_3_2: 
+      detail_3_route_4: 
+      detail_3_route_5: 
+      detail_3_route_6: 
+      detail_3_route_7: 
+      detail_3_route_8: 
+      detail_3_route_9: 
+      detail_3_stoparea_1: 
+      detail_3_stoparea_2: 
+      detail_3_stoparea_3: 
+      detail_3_stoparea_4: 
+      detail_3_stoparea_5: 
+      detail_3_vehiclejourney_1: 
+      detail_3_vehiclejourney_2_1: 
+      detail_3_vehiclejourney_2_2: 
+      detail_3_vehiclejourney_2_3: 
+      detail_3_vehiclejourney_3: 
+      detail_3_vehiclejourney_4: 
+      detail_4_accesslink_1_max_size: 
+      detail_4_accesslink_1_min_size: 
+      detail_4_accesslink_1_pattern: 
+      detail_4_accesslink_1_unique: 
+      detail_4_accesspoint_1_max_size: 
+      detail_4_accesspoint_1_min_size: 
+      detail_4_accesspoint_1_pattern: 
+      detail_4_accesspoint_1_unique: 
+      detail_4_company_1_max_size: 
+      detail_4_company_1_min_size: 
+      detail_4_company_1_pattern: 
+      detail_4_company_1_unique: 
+      detail_4_connectionlink_1_max_size: 
+      detail_4_connectionlink_1_min_size: 
+      detail_4_connectionlink_1_pattern: 
+      detail_4_connectionlink_1_unique: 
+      detail_4_connectionlink_2: 
+      detail_4_groupofline_1_max_size: 
+      detail_4_groupofline_1_min_size: 
+      detail_4_groupofline_1_pattern: 
+      detail_4_groupofline_1_unique: 
+      detail_4_journeypattern_1_max_size: 
+      detail_4_journeypattern_1_min_size: 
+      detail_4_journeypattern_1_pattern: 
+      detail_4_journeypattern_1_unique: 
+      detail_4_line_1_max_size: 
+      detail_4_line_1_min_size: 
+      detail_4_line_1_pattern: 
+      detail_4_line_1_unique: 
+      detail_4_line_2: 
+      detail_4_line_3_1: 
+      detail_4_line_3_2: 
+      detail_4_line_4_1: 
+      detail_4_line_4_2: 
+      detail_4_network_1_max_size: 
+      detail_4_network_1_min_size: 
+      detail_4_network_1_pattern: 
+      detail_4_network_1_unique: 
+      detail_4_route_1_max_size: 
+      detail_4_route_1_min_size: 
+      detail_4_route_1_pattern: 
+      detail_4_route_1_unique: 
+      detail_4_stoparea_1_max_size: 
+      detail_4_stoparea_1_min_size: 
+      detail_4_stoparea_1_pattern: 
+      detail_4_stoparea_1_unique: 
+      detail_4_stoparea_2: 
+      detail_4_timetable_1_max_size: 
+      detail_4_timetable_1_min_size: 
+      detail_4_timetable_1_pattern: 
+      detail_4_timetable_1_unique: 
+      detail_4_vehiclejourney_1_max_size: 
+      detail_4_vehiclejourney_1_min_size: 
+      detail_4_vehiclejourney_1_pattern: 
+      detail_4_vehiclejourney_1_unique: 
+      detail_4_vehiclejourney_2: 
